force-app/main/default/objects/User_Transfer__c/User_Transfer__c.object-meta.xml
<CustomObject>
    <label>User Transfer</label>
    <nameField>
        <displayFormat>Transfer-{00000000}</displayFormat>
        <label>User Transfer Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>