force-app/main/default/objects/User_Transfer__c/fields/Activity_Xfer_To__c.field-meta.xml
<CustomField>
    <fullName>Activity_Xfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user record that the Activity (Tasks, Events, Opportunities, Cases) is transferred to.</description>
    <inlineHelpText>The user record that the Activity (Tasks, Events, Opportunities, Cases) is transferred to.</inlineHelpText>
    <label>Activity Xfer To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>