force-app/main/default/objects/User_Transfer__c/fields/ActivityTransferRule__c.field-meta.xml
<CustomField>
    <fullName>ActivityTransferRule__c</fullName>
    <inlineHelpText>When transferring activity from the Existing User to the New User, are we transferring activity from before or after the effective date?</inlineHelpText>
    <label>Activity Transfer Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Effective Date</fullName>
            </value>
            <value>
                <fullName>After Effective Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>