force-app/main/default/objects/User_Transfer__c/fields/CopyUserFrom__c.field-meta.xml
<CustomField>
    <fullName>CopyUserFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When creating a new user record we are going to mirror an existing user record (to get role/profile info).</inlineHelpText>
    <label>Copy User From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserTransferCopyUser</relationshipName>
    <type>Lookup</type>
</CustomField>