force-app/main/default/objects/User_Transfer__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The effective date of transfer. Any activity moved will be as of this date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The effective date of transfer. Any activity moved will be as of this date.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>