force-app/main/default/objects/User_Transfer__c/fields/Existing_User__c.field-meta.xml
<CustomField>
    <fullName>Existing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The existing user record.</description>
    <inlineHelpText>The existing user record.</inlineHelpText>
    <label>Existing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>