force-app/main/default/objects/User_Transfer__c/fields/HasClosedActivity__c.field-meta.xml
<CustomField>
    <fullName>HasClosedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there closed activity/opportunity in the case of a sales transfer?</inlineHelpText>
    <label>Has Closed Activity?</label>
    <type>Checkbox</type>
</CustomField>