force-app/main/default/objects/User_Transfer__c/fields/HasOpenActivity__c.field-meta.xml
<CustomField>
    <fullName>HasOpenActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there open activity on this user record?</inlineHelpText>
    <label>Has Open Activity?</label>
    <type>Checkbox</type>
</CustomField>