force-app/main/default/objects/User_Transfer__c/fields/Manage_Type__c.field-meta.xml
<CustomField>
    <fullName>Manage_Type__c</fullName>
    <description>The type of activity that occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The type of activity that occurred.</inlineHelpText>
    <label>Manage Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>