force-app/main/default/objects/User_Transfer__c/fields/Nbr_Cases__c.field-meta.xml
<CustomField>
    <fullName>Nbr_Cases__c</fullName>
    <description>The number of Cases transferred.</description>
    <inlineHelpText>The number of Cases transferred.</inlineHelpText>
    <label>Nbr Cases Success</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>