force-app/main/default/objects/User_Transfer__c/fields/Nbr_Cases_Failed__c.field-meta.xml
<CustomField>
    <fullName>Nbr_Cases_Failed__c</fullName>
    <description>The number of cases that failed during transfer.</description>
    <inlineHelpText>The number of cases that failed during transfer.</inlineHelpText>
    <label>Nbr Cases Failed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>