force-app/main/default/objects/User_Transfer__c/fields/New_User__c.field-meta.xml
<CustomField>
    <fullName>New_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The new user record created as part of this transfer request.</description>
    <inlineHelpText>The new user record created as part of this transfer request.</inlineHelpText>
    <label>New User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Transfers2</relationshipName>
    <type>Lookup</type>
</CustomField>