force-app/main/default/objects/User_Transfer__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>To be used when no User to Mirror is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be used when no User to Mirror is entered</inlineHelpText>
    <label>Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>