force-app/main/default/objects/User_Transfer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>To be used when no User to Mirror is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be used when no User to Mirror is entered</inlineHelpText>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>