force-app/main/default/objects/User_Transfer__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>To be used when no User to Mirror is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be used when no User to Mirror is entered</inlineHelpText>
    <label>Sales Org</label>
    <length>40</length>
    <type>Text</type>
</CustomField>