force-app/main/default/objects/User_Transfer__c/fields/SalesActivityTransferFailed__c.field-meta.xml
<CustomField>
    <fullName>SalesActivityTransferFailed__c</fullName>
    <formula>ExistingUserIsSurvivor__c = true 
&amp;&amp;  IsExistingSales__c  = true
&amp;&amp;  IsTxferSales__c = true
&amp;&amp;  HasClosedActivity__c = true
 &amp;&amp;  Nbr_Events__c = 0 &amp;&amp;  Nbr_Opptys__c = 0 &amp;&amp;  Nbr_Tasks__c = 0
&amp;&amp;  ISPICKVAL( Status__c , &quot;Complete&quot;)</formula>
    <inlineHelpText>if this is Sales -&gt; Sales transfer within the same division, was the activity transferred to the inactive record?</inlineHelpText>
    <label>Sales Activity Transfer Failed</label>
    <type>Checkbox</type>
</CustomField>