force-app/main/default/objects/User_Transfer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending User Transfer</fullName>
            </value>
            <value>
                <fullName>Pending User Create</fullName>
            </value>
            <value>
                <fullName>Pending Activity Transfer</fullName>
            </value>
            <value>
                <fullName>Pending Activity Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>