force-app/main/default/objects/User_Transfer__c/fields/StrX__c.field-meta.xml
<CustomField>
    <fullName>StrX__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Keep track of how many previous transfers the user had.</inlineHelpText>
    <label>StrX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>