force-app/main/default/objects/User_Transfer__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>