force-app/main/default/objects/User_Transfer__c/listViews/Created_Last_30.listView-meta.xml
<ListView>
    <fullName>Created_Last_30</fullName>
    <columns>NAME</columns>
    <columns>Existing_User__c</columns>
    <columns>New_User__c</columns>
    <columns>Status__c</columns>
    <columns>CopyUserFrom__c</columns>
    <columns>Nbr_Events__c</columns>
    <columns>Nbr_Tasks__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Created Last 30</label>
</ListView>