force-app/main/default/objects/User_Transfer__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Existing_User__c</columns>
    <columns>New_User__c</columns>
    <columns>Status__c</columns>
    <columns>CopyUserFrom__c</columns>
    <columns>Nbr_Events__c</columns>
    <columns>Nbr_Tasks__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>