force-app/main/default/objects/User_Transfer__c/listViews/Denise_Fy21_2.listView-meta.xml
<ListView>
    <fullName>Denise_Fy21_2</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>Existing_User__c</columns>
    <columns>New_User__c</columns>
    <columns>Nbr_Events_Failed__c</columns>
    <columns>Nbr_Opptys_Failed__c</columns>
    <columns>Nbr_Tasks_Failed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag__c</field>
        <operation>equals</operation>
        <value>FY21-2</value>
    </filters>
    <label>Denise Fy21-2</label>
</ListView>