force-app/main/default/objects/User_Transfer__c/listViews/FY21_User_Transfer_View.listView-meta.xml
<ListView>
    <fullName>FY21_User_Transfer_View</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Existing_User__c</columns>
    <columns>New_User__c</columns>
    <columns>Nbr_Tasks_Failed__c</columns>
    <columns>Nbr_Events_Failed__c</columns>
    <columns>Nbr_Opptys_Failed__c</columns>
    <columns>ProcessTracker__c</columns>
    <columns>Nbr_Events__c</columns>
    <columns>Nbr_Opptys__c</columns>
    <columns>Nbr_Tasks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tag__c</field>
        <operation>equals</operation>
        <value>FY21</value>
    </filters>
    <label>FY21 User Transfer View</label>
</ListView>