force-app/main/default/objects/User_Transfer__c/listViews/Pending_Activity_Error.listView-meta.xml
<ListView>
    <fullName>Pending_Activity_Error</fullName>
    <columns>NAME</columns>
    <columns>Existing_User__c</columns>
    <columns>New_User__c</columns>
    <columns>Nbr_Events__c</columns>
    <columns>Nbr_Tasks__c</columns>
    <columns>Nbr_Opptys__c</columns>
    <columns>Nbr_Cases__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Activity Transfer</value>
    </filters>
    <label>Pending Activity Error</label>
</ListView>